# goit-pythonweb-hw-12

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 202efb3cdf01_.py  4c35709ef620_.py  6d8e031fd732_init.py  ea1ba5fb4049_.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/cache/: redis_cache.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/schemas/: auth.py  contacts.py  usesrs.py
src/service/: auth.py  contacts.py  email.py  upload_file.py  users.py  users_cache.py
src/templates/: reset_password.html  verify_email.html
tests/: conftest.py  test_contacts_repository_unit.py  test_integration_auth.py  test_integration_contacts.py  test_integration_users.py  test_users_repository_unit.py
